--- a/README.adoc
+++ b/README.adoc
@@ -83,7 +83,7 @@ After installation plugin exposes new token filter named `*russian_phonetic*`.
 
 == Getting started
 
-You can start using the `*russian_phonetic*` token filter with providing analysis configuration settings:
+You can start using the `*russian_phonetic*` token filter by providing analysis configuration settings:
 [source,javascript]
 ----
 PUT russian_phonetic_sample
@@ -110,7 +110,7 @@ PUT russian_phonetic_sample
 }
 ----
 
-Then you can test analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
+Then you should be able to test the analyzer with `*russian_phonetic*` token filter by running the https://www.elastic.co/guide/en/elasticsearch/reference/current/indices-analyze.html[analyze API]
 [source,javascript]
 ----
 POST russian_phonetic_sample/_analyze
