--- a/README.adoc
+++ b/README.adoc
@@ -38,6 +38,16 @@ Benchmarks results for {url-misspellings-benchmark}[matching misspellings and ty
 Encoding algorithm extensively employs russian phonetic and orthographic rules in order to fill
 the inconsistency gap between spelling and pronunciation.
 
+
+* вдры[зг]       ⟷    вдры[ск]
+* слове[тск]ий   ⟷    славе[цк]ий
+* ла[ндш]афт     ⟷    ла[нш]афт
+* п[я]так        ⟷    п[и]так
+* бу[хг]алтер    ⟷    бу[г]алтер
+* бю[стг]алтер   ⟷    бю[зд]галтер
+* ле[стн]ица     ⟷    ле[сн]ица
+* кислово[дск]   ⟷    кислово[цк]
+
 [source,intent=0]
 .Examples of spelling and pronunciation inconsistency in Russian Language
 ----
