--- a/README.adoc
+++ b/README.adoc
@@ -38,7 +38,7 @@ Benchmarks results for {url-misspellings-benchmark}[matching misspellings and ty
 Encoding algorithm extensively employs russian phonetic and orthographic rules in order to fill
 the inconsistency gap between spelling and pronunciation.
 
-.Examples of spelling and pronunciation inconsistency in Russian Language
+.Examples of spelling and pronunciation inconsistency in Russian Language:
 * вдры[зг]       ⟷    вдры[ск]
 * слове[тск]ий   ⟷    славе[цк]ий
 * ла[ндш]афт     ⟷    ла[нш]афт
