--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -147,34 +147,34 @@ image::assets/throughput/avg_orthographic.png[]
 image::assets/throughput/it_orthographic.png[]
 
 {empty} +
-[cols="3,2,2,2,2",options="header"]
+[cols="3m,2,2,2,2",options="header"]
 .Encoding throughput for Russian Orthography
 |=========================================================
-|Encoder |Average throughput |min |max |stdev
-|Russian1V[4] |2647597.829 ±(99.9%) 35722.091 ops/sec|2569171.493 |2776187.714 |72160.391
-|Russian1V[8] |2113365.341 ±(99.9%) 12859.272 ops/sec|2075562.782 |2154071.730 |25976.366
-|RussianAV[8] |2105996.555 ±(99.9%) 25157.316 ops/sec|2040640.985 |2210083.123 |50819.022
-|RussianAVS[8] |1254446.127 ±(99.9%) 15728.850 ops/sec|1188483.652 |1290024.829 |31773.056
-|BMCyrillic |57682.691 ±(99.9%) 261.885 ops/sec|56983.187 |58873.057 |529.021
-|BMRussian |57429.524 ±(99.9%) 268.025 ops/sec|56340.758 |58466.245 |541.423
-|Metaphone[4] |1966023.220 ±(99.9%) 11856.926 ops/sec|1913753.886 |2001922.957 |23951.577
-|Metaphone[8] |1603718.461 ±(99.9%) 5770.893 ops/sec|1586921.841 |1631197.046 |11657.490
-|Soundex |3272171.900 ±(99.9%) 38202.411 ops/sec|3155325.026 |3398455.535 |77170.761
+|*Encoder* |Average throughput |min |max |stdev
+|*Russian1V[4]* |2647597.829 ±(99.9%) 35722.091 ops/sec|2569171.493 |2776187.714 |72160.391
+|*Russian1V[8]* |2113365.341 ±(99.9%) 12859.272 ops/sec|2075562.782 |2154071.730 |25976.366
+|*RussianAV[8]* |2105996.555 ±(99.9%) 25157.316 ops/sec|2040640.985 |2210083.123 |50819.022
+|*RussianAVS[8]* |1254446.127 ±(99.9%) 15728.850 ops/sec|1188483.652 |1290024.829 |31773.056
+|*BMCyrillic* |57682.691 ±(99.9%) 261.885 ops/sec|56983.187 |58873.057 |529.021
+|*BMRussian* |57429.524 ±(99.9%) 268.025 ops/sec|56340.758 |58466.245 |541.423
+|*Metaphone[4]* |1966023.220 ±(99.9%) 11856.926 ops/sec|1913753.886 |2001922.957 |23951.577
+|*Metaphone[8]* |1603718.461 ±(99.9%) 5770.893 ops/sec|1586921.841 |1631197.046 |11657.490
+|*Soundex* |3272171.900 ±(99.9%) 38202.411 ops/sec|3155325.026 |3398455.535 |77170.761
 |=========================================================
 
-[cols="1,4,4,2,3",options="header"]
+[cols="1m,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Orthography
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
-|Russian1V[4] |486.376 ±2.963 |280.766 ±0.004 |337 ±0.001|232 ±0.001 ms
-|Russian1V[8] |431.104 ±2.410 |294.107 ±0.005 |299 ±0.001|205 ±0.001 ms
-|RussianAV[8] |427.313 ±2.555 |296.701 ±0.004 |297 ±0.001|204 ±0.001 ms
-|RussianAVS[8] |279.835 ±1.349 |301.254 ±0.003 |193 ±0.001|133 ±0.001 ms
-|BMCyrillic |1023.707 ±3.969 |19947.886 ±12.078 |590 ±0.001|431 ±0.001 ms
-|BMRussian |971.290 ±7.554 |19635.237 ±9.050 |559 ±0.001|410 ±0.001 ms
-|Metaphone[4] |751.933 ±5.057 |553.443 ±0.021 |359 ±0.001|271 ±0.001 ms
-|Metaphone[8] |676.291 ±4.429 |585.678 ±0.039 |322 ±0.001|244 ±0.001 ms
-|Soundex |710.788 ±3.802|359.192 ±0.013|408 ±0.001|289 ±0.001 ms
+|*Encoder* |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|*Russian1V[4]* |486.376 ±2.963 |280.766 ±0.004 |337 ±0.001|232 ±0.001 ms
+|*Russian1V[8]* |431.104 ±2.410 |294.107 ±0.005 |299 ±0.001|205 ±0.001 ms
+|*RussianAV[8]* |427.313 ±2.555 |296.701 ±0.004 |297 ±0.001|204 ±0.001 ms
+|*RussianAVS[8]* |279.835 ±1.349 |301.254 ±0.003 |193 ±0.001|133 ±0.001 ms
+|*BMCyrillic* |1023.707 ±3.969 |19947.886 ±12.078 |590 ±0.001|431 ±0.001 ms
+|*BMRussian* |971.290 ±7.554 |19635.237 ±9.050 |559 ±0.001|410 ±0.001 ms
+|*Metaphone[4]* |751.933 ±5.057 |553.443 ±0.021 |359 ±0.001|271 ±0.001 ms
+|*Metaphone[8]* |676.291 ±4.429 |585.678 ±0.039 |322 ±0.001|244 ±0.001 ms
+|*Soundex* |710.788 ±3.802|359.192 ±0.013|408 ±0.001|289 ±0.001 ms
 |=========================================================
 
 === Results for Russian Names
@@ -183,34 +183,34 @@ image::assets/throughput/avg_surnames.png[]
 image::assets/throughput/it_surnames.png[]
 
 {empty} +
-[cols="3,2,2,2,2",options="header"]
+[cols="3m,2,2,2,2",options="header"]
 .Encoding throughput for Russian Names, ops/sec
 |=========================================================
-|Encoder |avg |min |max |stdev
-|Russian1V[4] |2506527.072 ±(99.9%) 33156.085 ops/sec|2415171.630 |2626312.273 |66976.932
-|Russian1V[8] |2265693.814 ±(99.9%) 29037.597 ops/sec|2180173.222 |2380002.854 |58657.383
-|RussianAV[8] |2074308.638 ±(99.9%) 13564.626 ops/sec|2017562.128 |2113795.419 |27401.21
-|RussianAVS[8] |1295961.626 ±(99.9%) 5872.540 ops/sec|1272355.402 |1318092.902 |11862.822
-|BMCyrillic |65551.880 ±(99.9%) 323.160 ops/sec|64323.799 |66662.741 |652.799
-|BMRussian |66960.854 ±(99.9%) 904.904 ops/sec|63460.861 |69617.282 |1827.950
-|Metaphone[4] |2093931.887 ±(99.9%) 5637.361 ops/sec|2070130.200 |2115582.141 |11387.748
-|Metaphone[8] |1851280.670 ±(99.9%) 3955.964 ops/sec|1831141.255 |1868500.157 |7991.243
-|Soundex |3818189.464 ±(99.9%) 23099.066 ops/sec|3741253.286 |3914885.467 |46661.255
+|*Encoder* |avg |min |max |stdev
+|*Russian1V[4]* |2506527.072 ±(99.9%) 33156.085 ops/sec|2415171.630 |2626312.273 |66976.932
+|*Russian1V[8]* |2265693.814 ±(99.9%) 29037.597 ops/sec|2180173.222 |2380002.854 |58657.383
+|*RussianAV[8]* |2074308.638 ±(99.9%) 13564.626 ops/sec|2017562.128 |2113795.419 |27401.21
+|*RussianAVS[8]* |1295961.626 ±(99.9%) 5872.540 ops/sec|1272355.402 |1318092.902 |11862.822
+|*BMCyrillic* |65551.880 ±(99.9%) 323.160 ops/sec|64323.799 |66662.741 |652.799
+|*BMRussian* |66960.854 ±(99.9%) 904.904 ops/sec|63460.861 |69617.282 |1827.950
+|*Metaphone[4]* |2093931.887 ±(99.9%) 5637.361 ops/sec|2070130.200 |2115582.141 |11387.748
+|*Metaphone[8]* |1851280.670 ±(99.9%) 3955.964 ops/sec|1831141.255 |1868500.157 |7991.243
+|*Soundex* |3818189.464 ±(99.9%) 23099.066 ops/sec|3741253.286 |3914885.467 |46661.255
 |=========================================================
 
-[cols="1,4,4,2,3",options="header"]
+[cols="1m,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Names
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
-|Russian1V[4] |543.331 ±3.811|334.474 ±0.003|312 ±0.001|226 ±0.001 ms
-|Russian1V[8] |542.050 ±4.047|346.829 ±0.005|312 ±0.001|224 ±0.001 ms
-|RussianAV[8] |481.711 ±3.263|350.241 ±0.004|334 ±0.001|234 ±0.001 ms
-|RussianAVS[8] |282.863 ±2.565|297.858 ±0.003|196 ±0.001|137 ±0.001 ms
-|BMCyrillic |1015.914 ±9.498|17386.565 ±8.017|584 ±0.001|428 ±0.001 ms
-|BMRussian |976.675 ±7.145|15966.931 ±4.679|562 ±0.001|410 ±0.001 ms
-|Metaphone[4] |692.634 ±5.657 |486.683 ±0.022 |331 ±0.001|249 ±0.001 ms
-|Metaphone[8] |630.032 ±5.051 |494.440 ±0.045 |363 ±0.001|264 ±0.001 ms
-|Soundex |697.296 ±3.522|329.514 ±0.016|402 ±0.001|289 ±0.001 ms
+|*Encoder* |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|*Russian1V[4]* |543.331 ±3.811|334.474 ±0.003|312 ±0.001|226 ±0.001 ms
+|*Russian1V[8]* |542.050 ±4.047|346.829 ±0.005|312 ±0.001|224 ±0.001 ms
+|*RussianAV[8]* |481.711 ±3.263|350.241 ±0.004|334 ±0.001|234 ±0.001 ms
+|*RussianAVS[8]* |282.863 ±2.565|297.858 ±0.003|196 ±0.001|137 ±0.001 ms
+|*BMCyrillic* |1015.914 ±9.498|17386.565 ±8.017|584 ±0.001|428 ±0.001 ms
+|*BMRussian* |976.675 ±7.145|15966.931 ±4.679|562 ±0.001|410 ±0.001 ms
+|*Metaphone[4]* |692.634 ±5.657 |486.683 ±0.022 |331 ±0.001|249 ±0.001 ms
+|*Metaphone[8]* |630.032 ±5.051 |494.440 ±0.045 |363 ±0.001|264 ±0.001 ms
+|*Soundex* |697.296 ±3.522|329.514 ±0.016|402 ±0.001|289 ±0.001 ms
 |=========================================================
 
 === Results for Russian Morphology
@@ -219,32 +219,32 @@ image::assets/throughput/avg_morphology.png[]
 image::assets/throughput/it_morphology.png[]
 
 {empty} +
-[cols="3,2,2,2,2",options="header"]
+[cols="3m,2,2,2,2",options="header"]
 .Encoding throughput for Russian Morphology, ops/sec
 |=========================================================
-|Encoder |avg |min |max |stdev
-|Russian1V[4] |2641798.967 ±(99.9%) 27871.170 ops/sec|2546073.703 |2742791.925 |56301.142
-|Russian1V[8] |1968202.750 ±(99.9%) 13858.195 ops/sec|1925210.531 |2012509.20 |27994.240
-|RussianAV[8] |2036536.580 ±(99.9%) 23576.497 ops/sec|1964656.022 |2110237.004 |47625.690
-|RussianAVS[8] |1229398.603 ±(99.9%) 5629.689 ops/sec|1211414.927 |1251038.820 |11372.251
-|BMCyrillic |49369.203 ±(99.9%) 150.457 ops/sec|48850.929 |50208.493 |303.931
-|BMRussian |48270.272 ±(99.9%) 663.936 ops/sec|45684.455 |50175.399 |1341.184
-|Metaphone[4] |1905785.656 ±(99.9%) 7769.880 ops/sec|1874290.331|1936325.547 |15695.542
-|Metaphone[8] |1469021.395 ±(99.9%) 6090.840 ops/sec|1441586.242|1486699.826 |12303.798
-|Soundex |3198355.373 ±(99.9%) 17147.281 ops/sec|3123747.991 |3262432.307 |34638.357
+|*Encoder* |avg |min |max |stdev
+|*Russian1V[4]* |2641798.967 ±(99.9%) 27871.170 ops/sec|2546073.703 |2742791.925 |56301.142
+|*Russian1V[8]* |1968202.750 ±(99.9%) 13858.195 ops/sec|1925210.531 |2012509.20 |27994.240
+|*RussianAV[8]* |2036536.580 ±(99.9%) 23576.497 ops/sec|1964656.022 |2110237.004 |47625.690
+|*RussianAVS[8]* |1229398.603 ±(99.9%) 5629.689 ops/sec|1211414.927 |1251038.820 |11372.251
+|*BMCyrillic* |49369.203 ±(99.9%) 150.457 ops/sec|48850.929 |50208.493 |303.931
+|*BMRussian* |48270.272 ±(99.9%) 663.936 ops/sec|45684.455 |50175.399 |1341.184
+|*Metaphone[4]* |1905785.656 ±(99.9%) 7769.880 ops/sec|1874290.331|1936325.547 |15695.542
+|*Metaphone[8]* |1469021.395 ±(99.9%) 6090.840 ops/sec|1441586.242|1486699.826 |12303.798
+|*Soundex* |3198355.373 ±(99.9%) 17147.281 ops/sec|3123747.991 |3262432.307 |34638.357
 |=========================================================
 
-[cols="1,4,4,2,3",options="header"]
+[cols="1m,4,4,2,3",options="header"]
 .JMH GC Profiler report for Russian Morphology
 |=========================================================
-|Encoder |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
-|Russian1V[4] |497.960 ±4.202 |282.257 ±0.002 |345 ±0.001|239 ±0.001 ms
-|Russian1V[8] |401.271 ±2.651 |296.762 ±0.003 |278 ±0.001|194 ±0.001 ms
-|RussianAV[8] |427.909 ±3.330 |298.306 ±0.003 |296 ±0.001|205 ±0.001 ms
-|RussianAVS[8] |289.160 ±4.291 |304.492 ±0.004 |200 ±0.001|139 ±0.001 ms
-|BMCyrillic |1041.929 ±7.655 |23658.016 ±7.346 |600 ±0.001|437 ±0.001 ms
-|BMRussian |961.277 ±4.851 |23242.677 ±16.379 |553 ±0.001|403 ±0.001 ms
-|Metaphone[4] |733.528 ±3.678 |554.367 ±0.026 |350 ±0.001|261 ±0.001 ms
-|Metaphone[8] |608.637 ±4.422 |587.620 ±0.032 |350 ±0.001|248 ±0.001 ms
-|Soundex |735.598 ±5.799|383.995 ±0.008|351 ±0.001|266 ±0.001 ms
+|*Encoder* |allocation rate, mb/sec |allocation rate norm., b/op |gc count, sum |gc time, sum
+|*Russian1V[4]* |497.960 ±4.202 |282.257 ±0.002 |345 ±0.001|239 ±0.001 ms
+|*Russian1V[8]* |401.271 ±2.651 |296.762 ±0.003 |278 ±0.001|194 ±0.001 ms
+|*RussianAV[8]* |427.909 ±3.330 |298.306 ±0.003 |296 ±0.001|205 ±0.001 ms
+|*RussianAVS[8]* |289.160 ±4.291 |304.492 ±0.004 |200 ±0.001|139 ±0.001 ms
+|*BMCyrillic* |1041.929 ±7.655 |23658.016 ±7.346 |600 ±0.001|437 ±0.001 ms
+|*BMRussian* |961.277 ±4.851 |23242.677 ±16.379 |553 ±0.001|403 ±0.001 ms
+|*Metaphone[4]* |733.528 ±3.678 |554.367 ±0.026 |350 ±0.001|261 ±0.001 ms
+|*Metaphone[8]* |608.637 ±4.422 |587.620 ±0.032 |350 ±0.001|248 ±0.001 ms
+|*Soundex* |735.598 ±5.799|383.995 ±0.008|351 ±0.001|266 ±0.001 ms
 |=========================================================
