--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -59,7 +59,7 @@ Generated java files will be located in `*com.github.papahigh.phonetic.generated
 .Encoders compared
 [width="80%",cols="3m,4,10",options="header"]
 |=========================================================
-|Label |Algorithm |Options
+|Encoder |Algorithm |Options
 |*Russian1V[4]* |Russian Phonetic
 | max_code_len: `*4*` +
 vowels: `*encode_first*`
