--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -4,8 +4,6 @@ Nikolay Papakha
 :!toc-title:
 :toclevels: 4
 ifdef::env-github[]
-:imagesdir:
- https://gist.githubusercontent.com/path/to/gist/revision/dir/with/all/images
 :tip-caption: :bulb:
 :note-caption: :information_source:
 :important-caption: :heavy_exclamation_mark:
@@ -13,7 +11,6 @@ ifdef::env-github[]
 :warning-caption: :warning:
 endif::[]
 ifndef::env-github[]
-:imagesdir: ./
 endif::[]
 
 :url-throughput-benchmark: https://github.com/papahigh/elasticsearch-russian-phonetics/blob/master/benchmark/throughput.asciidoc
@@ -76,7 +73,7 @@ For each pair of encoder instance and supplied dictionary the following is taken
 .Encoders compared
 [width="80%",cols="3m,4,10",options="header"]
 |=========================================================
-|Label |Algorithm |Options
+|Encoder |Algorithm |Options
 |*Russian1V* |Russian Phonetic
 | max_code_len `in [*4*, *14*]` +
 vowels: `*encode_first*`
