--- a/README.asciidoc
+++ b/README.asciidoc
@@ -69,12 +69,12 @@ where `*URL*` points to zip file of the appropriate release which corresponds to
 The plugin must be installed on every node in the cluster, and each node must be restarted after installation.
 ====
 
-E.g., command for plugin installation on Elasticsearch 6.3.2
+E.g., command for plugin Elasticsearch 6.3.2:
 
-[source,sh]
-----
-$ bin/elasticsearch-plugin install https://github.com/papahigh/elasticsearch-russian-phonetics/raw/6.3.2/esplugin/plugin-distributions/analysis-russian-phonetic-6.3.2.zip
-----
+```sh
+# install plugin on Elasticsearch 6.3.2
+$  bin/elasticsearch-plugin install https://github.com/papahigh/elasticsearch-russian-phonetics/raw/6.3.2/esplugin/plugin-distributions/analysis-russian-phonetic-6.3.2.zip
+```
 
 After installation plugin exposes new token filter named `*russian_phonetic*`.
 
