--- a/encoder/README.asciidoc
+++ b/encoder/README.asciidoc
@@ -2,7 +2,7 @@
 Nikolay Papakha
 ifdef::env-github[]
 :tip-caption: :bulb:
-:note-caption: :information_source:
+:note-caption: :paperclip:
 :important-caption: :heavy_exclamation_mark:
 :caution-caption: :fire:
 :warning-caption: :warning:
