--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -157,7 +157,8 @@ Distribution of Russian names on generated phonetic codes. X-axis represents max
 
 Total encoded: *254755* names
 
-image::assets/russian_surnames/plot.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_surnames/plot.png[russian_names_distribution.png]
+image::https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_surnames/plot.png[]
 
 [width="80%",options="header"]
 .Number of produced phonetic codes
@@ -216,7 +217,8 @@ Distribution of Russian orthography dictionary on generated phonetic codes. X-ax
 
 Total encoded: *172899* words
 
-image::assets/russian_orthography/plot.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_orthography/plot.png[russian_orthography_distribution.png]
+image::https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_orthography/plot.png[]
 
 [options="header"]
 .Number of produced phonetic codes
@@ -275,7 +277,8 @@ Distribution of Russian morphology dictionary on generated phonetic codes. X-axi
 
 Total encoded: *2380519* words (173975 unique russian words and their morphological forms)
 
-image::assets/russian_morphology/plot.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_morphology/plot.png[russian_morphology_distribution.png]
+image::https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/russian_morphology/plot.png[]
 
 [options="header"]
 .Number of produced phonetic codes
