--- a/benchmark/misspellings_and_typos.asciidoc
+++ b/benchmark/misspellings_and_typos.asciidoc
@@ -1,4 +1,4 @@
-= Matching misspellings and typos benchmark
+= Misspellings and typos matching benchmark
 Nikolay Papakha
 :toc:
 :!toc-title:
@@ -126,7 +126,9 @@ thus limiting its efficient usage for certain use cases/data sets only
 Even with max code length 4, `*Russian1V[4]*` shows +1.2% advantage in comparison with `*Metaphone[4]*`
 * Enabled stemmer in `*RussianAVS[8]*` gives additional 1.2K matches in comparison with `*RussianAV[8]*`
 
-image::assets/misspellings_and_typos/plot.png[]
+
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/misspellings_and_typos/plot.png[misspellings_and_typos_matching.png]
+image::https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/misspellings_and_typos/plot.png[]
 
 .Matching results
 [width="80%",cols="m,>,>",options="header"]
