--- a/benchmark/throughput.asciidoc
+++ b/benchmark/throughput.asciidoc
@@ -143,8 +143,10 @@ thus limiting its efficient usage for certain use cases/data sets only.
 
 === Results for Russian Orthography
 
-image::assets/throughput/avg_orthography.png[]
-image::assets/throughput/it_orthographic.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_orthography.png[avg_orthography_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_orthography.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_orthographic.png[it_orthography_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_orthographic.png[]
 
 {empty} +
 [cols="3m,2,2,2,2",options="header"]
@@ -179,8 +181,10 @@ image::assets/throughput/it_orthographic.png[]
 
 === Results for Russian Names
 
-image::assets/throughput/avg_surnames.png[]
-image::assets/throughput/it_surnames.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_surnames.png[avg_surnames_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_surnames.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_surnames.png[it_surnames_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_surnames.png[]
 
 {empty} +
 [cols="3m,2,2,2,2",options="header"]
@@ -215,8 +219,10 @@ image::assets/throughput/it_surnames.png[]
 
 === Results for Russian Morphology
 
-image::assets/throughput/avg_morphology.png[]
-image::assets/throughput/it_morphology.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_morphology.png[avg_morphology_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/avg_morphology.png[]
+.link:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_morphology.png[it_morphology_throughput.png]
+image:https://raw.githubusercontent.com/papahigh/elasticsearch-russian-phonetics/master/benchmark/assets/throughput/it_morphology.png[]
 
 {empty} +
 [cols="3m,2,2,2,2",options="header"]
